@@ -1,14 +1,13 @@
 This package was debianized by Jack Coulter <jscinoz@gmail.com> on
 Sat, 07 Jun 2008 12:53:23 +1000.
 
-It was downloaded from http://google-gadgets-for-linux.googlecode.com/files/
- google-gadgets-for-linux-0.10.2.tar.bz2
+It was downloaded from http://google-gadgets-for-linux.googlecode.com/files/google-gadgets-for-linux-0.10.2.tar.bz2
 
-Upstream Author:
+Upstream Author: 
 
    Google Gadgets for Linux team <google-gadgets-for-linux-dev@googlegroups.com>
 
-Copyright:
+Copyright: 
 
     Copyright (C) 2008  Google Gadgets for Linux team
 
