@@ -13,7 +13,8 @@ DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 VERSION:=$(shell dpkg-parsechangelog | grep Version | cut -d" " -f2|cut -d"-" -f1)
 
 get-orig-source:
-	uscan --force-download
+	# rename to what debian wants, repack to tgz rather than tbz2
+	uscan --force-download --rename --repack
 
 config.status: configure
 	dh_testdir
@@ -24,14 +25,14 @@ config.status: configure
 	--disable-werror)
 
 
-#Architecture
+#Architecture 
 build: build-arch build-indep
 
 build-arch: build-arch-stamp
 build-arch-stamp:  config.status
 
 	# Add here commands to compile the arch part of the package.
-	#$(MAKE)
+	#$(MAKE) 
 	touch $@
 
 build-indep: build-indep-stamp
@@ -45,25 +46,25 @@ clean:
 	dh_testdir
 	dh_testroot
 	
-	rm -f build-arch-stamp build-indep-stamp
+	rm -f build-arch-stamp build-indep-stamp 
 
 	rm -rf build debian/google-gadgets
 
 
-	dh_clean
+	dh_clean 
 
 install: install-indep install-arch
 install-indep:
 	dh_testdir
 	dh_testroot
-	dh_clean -k -i
+	dh_clean -k -i 
 	dh_installdirs -i
 	dh_install -i
 
 install-arch:
 	dh_testdir
 	dh_testroot
-	dh_clean -k -s
+	dh_clean -k -s 
 	dh_installdirs -s
 	
 	(cd build; $(MAKE) DESTDIR=$(CURDIR)/debian/google-gadgets install)
@@ -80,7 +81,7 @@ install-arch:
 	dh_installman -pgoogle-gadgets-qt debian/ggl-qt.7
 	
 	
- 
+  
 # Must not depend on anything. This is to be called by
 # binary-arch/binary-indep
 # in another 'make' thread.
@@ -96,7 +97,7 @@ binary-common:
 	dh_installmenu
 	dh_link
 	dh_strip
-	dh_compress
+	dh_compress 
 	dh_fixperms
 	dh_installdeb
 	dh_gencontrol
@@ -112,4 +113,4 @@ binary-arch: build-arch install-arch
 	$(MAKE) -f debian/rules DH_OPTIONS=-s binary-common
 
 binary: binary-arch binary-indep
-.PHONY: build clean binary-indep binary-arch binary install install-indep install-arch
+.PHONY: build clean binary-indep binary-arch binary install install-indep install-arch 
