@@ -1,8 +1,9 @@
 google-gadgets (0.10.2-1) unstable; urgency=low
 
   * Upgraded to 0.10.2
+  * Merged libggadget-xdg into libggadget (and respective -dev packages)
 
- -- James Su <james.su@gmail.com>  Sat, 13 Sep 2008 23:33:00 +1000
+ -- Jack Coulter <jscinoz@gmail.com>  Sun, 14 Sep 2008 11:14:09 +1000
 
 google-gadgets (0.10.1-1) unstable; urgency=low
 
